@@ -251,7 +251,7 @@ EOT
 |`10.0.0.0/16`
 
 |vcn_dns_label
-|The internal DNS domain for resources created and prepended to "oraclevcn.com" which is the VCN-internal domain name. *Required*
+|The internal DNS domain for resources created and prepended to "oraclevcn.com" which is the VCN-internal domain name. DNS resolution of hostnames in the VCN is disabled when null.
 |
 |oke
 
