@@ -5,7 +5,7 @@ resource "oci_core_subnet" "cp" {
   cidr_block                 = local.cp_subnet
   compartment_id             = var.compartment_id
   display_name               = var.label_prefix == "none" ? "control-plane" : "${var.label_prefix}-control-plane"
-  dns_label                  = var.label_prefix == "none" ? "cp" : "${var.label_prefix}cp"
+  dns_label                  = var.assign_dns ? var.label_prefix == "none" ? "cp" : "${var.label_prefix}cp" : null
   prohibit_public_ip_on_vnic = var.control_plane_type == "private" ? true : false
   route_table_id             = var.control_plane_type == "private" ? var.nat_route_id : var.ig_route_id
   security_list_ids          = [oci_core_security_list.control_plane_seclist.id]
@@ -20,7 +20,7 @@ resource "oci_core_subnet" "workers" {
   cidr_block                 = local.workers_subnet
   compartment_id             = var.compartment_id
   display_name               = var.label_prefix == "none" ? "workers" : "${var.label_prefix}-workers"
-  dns_label                  = var.label_prefix == "none" ? "workers" : "${var.label_prefix}wo"
+  dns_label                  = var.assign_dns ? var.label_prefix == "none" ? "workers" : "${var.label_prefix}wo" : null
   prohibit_public_ip_on_vnic = var.worker_type == "private" ? true : false
   route_table_id             = var.worker_type == "private" ? var.nat_route_id : var.ig_route_id
   vcn_id                     = var.vcn_id
@@ -34,7 +34,7 @@ resource "oci_core_subnet" "pods" {
   cidr_block                 = local.pods_subnet
   compartment_id             = var.compartment_id
   display_name               = var.label_prefix == "none" ? "pods" : "${var.label_prefix}-pods"
-  dns_label                  = var.label_prefix == "none" ? "pods" : "${var.label_prefix}po"
+  dns_label                  = var.assign_dns ? var.label_prefix == "none" ? "pods" : "${var.label_prefix}po" : null
   prohibit_public_ip_on_vnic = true
   route_table_id             = var.nat_route_id
   vcn_id                     = var.vcn_id
@@ -50,7 +50,7 @@ resource "oci_core_subnet" "int_lb" {
   cidr_block                 = local.int_lb_subnet
   compartment_id             = var.compartment_id
   display_name               = var.label_prefix == "none" ? "int-lb" : "${var.label_prefix}-int-lb"
-  dns_label                  = var.label_prefix == "none" ? "intlb" : "${var.label_prefix}ilb"
+  dns_label                  = var.assign_dns ? var.label_prefix == "none" ? "intlb" : "${var.label_prefix}ilb" : null
   prohibit_public_ip_on_vnic = true
   route_table_id             = var.nat_route_id
   vcn_id                     = var.vcn_id
@@ -66,11 +66,10 @@ resource "oci_core_subnet" "pub_lb" {
   cidr_block                 = local.pub_lb_subnet
   compartment_id             = var.compartment_id
   display_name               = var.label_prefix == "none" ? "pub-lb" : "${var.label_prefix}-pub-lb"
-  dns_label                  = var.label_prefix == "none" ? "publb" : "${var.label_prefix}plb"
+  dns_label                  = var.assign_dns ? var.label_prefix == "none" ? "publb" : "${var.label_prefix}plb" : null
   prohibit_public_ip_on_vnic = false
   route_table_id             = var.ig_route_id
-  # security_list_ids          = [oci_core_security_list.pub_lb_seclist[0].id]
-  vcn_id = var.vcn_id
+  vcn_id                     = var.vcn_id
 
   lifecycle {
     ignore_changes = [dns_label]
